# iodv3-backend

./: .env.example  .gitignore  CLEANUP_GUIDE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_ANALYSIS.md  KIND_DEPLOYMENT.md  Makefile  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROJECT_FINALIZATION.md  PROJECT_STRUCTURE.md  README.md  README.md.backup  docker-compose.db.yaml  docker-compose.yaml  plan.txt  pyproject.toml  requirements.txt  setup.sh  test-ingress.yaml  test_api.sh
gateway/: Dockerfile  main.py
k8s/: kind-config.yaml
k8s/dev/: accounts-service.yaml  api-gateway.yaml  blog-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
k8s/qa/: accounts-service.yaml  api-gateway.yaml  blog-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
kubernetes/: ingress.yaml
scripts/: access-services.sh  build.sh  cleanup.sh  deploy-hybrid.sh  deploy-ingress.sh  deploy-kind-enhanced.sh  deploy-phase2.sh  deploy-phase3.sh  deploy.sh  init-db.sql  monitor-resources.sh  port-forward.sh  setup-hosts.sh  setup-registry.sh  status-check.sh  test-comprehensive.sh  test-ingress.sh  test-kind-deployment.sh  test-performance.sh  test.sh
services/accounts/: .gitignore  Dockerfile  README.md  auth.py  crud.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt  schemas.py
services/accounts/app/: main.py
services/blog/: Dockerfile  README.md  alembic.ini  blog.db  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
tests/: test_accounts.py  test_gateway.py
(+22 files in other folders)
